--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <a href="https://www.instagram.com/alvito1909/"><i data-feather="instagram"></i></a>
             <a href="mailto:alvitorifky58@gmail.com"><i data-feather="mail"></i></a>
             <a href="https://www.linkedin.com/in/alvito-rifky-dienova-3394122b2/"><i data-feather="linkedin"></i></a>
+            <a href="https://github.com/AlvitoRifky"><i data-feather="github"></i></a>
         </div>
         <div class="credit">
             <p>Created by <a>Alvito Rifky D.</a>| &copy; 2024</p>
